# MESIO-Optimization-Electricity-Systems-Markets

./: README.md  pyproject.toml
assigment1/ampl/ex1/: 1a.mod  1a.run
assigment1/ampl/ex2/: ex2.mod  ex2.run
assigment2/: model_mic.mod  report.run
exercise2/: economic_dispatch.mod  economic_dispatch.run
exercise3/: unit_commitment.mod  unit_commitment.run  unit_commitment_reserve.mod  unit_commitment_reserve.run
exercise4/src/: main.py  plots.py
exercise4/src/models/: multi_period_auction.py  singe_period_auction.py  single_period_auction.py
exercise7/src/: main.py  plots.py
exercise7/src/instances/: generate.py
exercise7/src/models/: sded_cvar.py  sded_mean_variance.py
